Embed impressum & datenschutz

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
   <img src="https://picsum.photos/1000/300?contact" alt="Kontakt Elterncoaching Gramastetten">
   <p>Sie möchten ein unverbindliches Erstgespräch vereinbaren oder haben Fragen zu meinem Angebot? Ich freue mich auf Ihre Nachricht.</p>
 
-  <form action="https://formspree.io/f/xykzrbwa" method="POST">
+  <form action="https://formspree.io/f/XXXXXXX" method="POST">
     <label>Name
       <input type="text" name="name" required>
     </label>
@@ -106,8 +106,47 @@
 </section>
 
 <footer>
-  <p>&copy; 2026 · Einzelunternehmer · Gramastetten · <a href="impressum.html">Impressum</a> · <a href="datenschutz.html">Datenschutz</a></p>
+  <p>&copy; 2026 · Einzelunternehmer · Gramastetten · <a href="#impressum">Impressum</a> · <a href="#datenschutz">Datenschutz</a></p>
 </footer>
+
+<section id="impressum">
+  <h2>Impressum</h2>
+  <p><strong>Angaben gemäß § 5 ECG (Österreich)</strong></p>
+  <p>
+    [Dein Name]<br>
+    Elterncoaching & Familienbegleitung<br>
+    4201 Gramastetten<br>
+    Österreich
+  </p>
+  <p>
+    Telefon: [optional]<br>
+    E-Mail: [deine E-Mail-Adresse]
+  </p>
+  <p>
+    Einzelunternehmer<br>
+    Keine Umsatzsteuer gemäß § 6 Abs. 1 Z 27 UStG (Kleinunternehmerregelung)
+  </p>
+  <p>
+    Aufsichtsbehörde: Bezirkshauptmannschaft Urfahr-Umgebung<br>
+    Unternehmensgegenstand: Elterncoaching und Familienbegleitung
+  </p>
+</section>
+
+<section id="datenschutz">
+  <h2>Datenschutzerklärung</h2>
+  <p>Der Schutz Ihrer persönlichen Daten ist mir ein besonderes Anliegen. Ich verarbeite Ihre Daten daher ausschließlich auf Grundlage der gesetzlichen Bestimmungen (DSGVO, TKG 2003).</p>
+
+  <h3>Kontaktaufnahme</h3>
+  <p>Wenn Sie per Formular auf der Website Kontakt mit mir aufnehmen, werden Ihre angegebenen Daten zwecks Bearbeitung der Anfrage und für den Fall von Anschlussfragen sechs Monate bei mir gespeichert. Diese Daten gebe ich nicht ohne Ihre Einwilligung weiter.</p>
+
+  <h3>Kontaktformular</h3>
+  <p>Für das Kontaktformular wird der Dienst <strong>Formspree</strong> verwendet. Die Daten werden verschlüsselt übertragen und ausschließlich zur Bearbeitung Ihrer Anfrage verwendet.</p>
+
+  <h3>Ihre Rechte</h3>
+  <p>Ihnen stehen grundsätzlich die Rechte auf Auskunft, Berichtigung, Löschung, Einschränkung, Datenübertragbarkeit, Widerruf und Widerspruch zu. Wenn Sie glauben, dass die Verarbeitung Ihrer Daten gegen das Datenschutzrecht verstößt, haben Sie das Recht, sich bei der österreichischen Datenschutzbehörde zu beschweren.</p>
+
+  <p>Österreichische Datenschutzbehörde<br>Barichgasse 40–42<br>1030 Wien</p>
+</section>
 
 <script>
 function toggleMenu(){document.getElementById('menu').classList.toggle('active')}
