--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
   <img src="https://picsum.photos/1000/300?contact" alt="Kontakt Elterncoaching Gramastetten">
   <p>Sie möchten ein unverbindliches Erstgespräch vereinbaren oder haben Fragen zu meinem Angebot? Ich freue mich auf Ihre Nachricht.</p>
 
-  <form action="https://formspree.io/f/XXXXXXX" method="POST">
+  <form action="https://formspree.io/f/xykzrbwa" method="POST">
     <label>Name
       <input type="text" name="name" required>
     </label>
