--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-<style>*{margin:0;padding:0;box-sizing:border-box}html,body{height:100%;font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,sans-serif;background-color:#f5f5f5;color:#333}</style><link rel="stylesheet" href="styles.a1b1fbdb436bdeb5.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.a1b1fbdb436bdeb5.css"></noscript></head>
+<style>*{margin:0;padding:0;box-sizing:border-box}html,body{height:100%;font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,sans-serif;background-color:#f5f5f5;color:#333}body{display:flex;flex-direction:column}app-root{display:flex;flex-direction:column;min-height:100vh}</style><link rel="stylesheet" href="styles.fdabf208ea6761fa.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.fdabf208ea6761fa.css"></noscript></head>
 <body>
   <app-root></app-root>
-<script src="runtime.94a50f974d8ca3ed.js" type="module"></script><script src="polyfills.3da5f6ad7fea9067.js" type="module"></script><script src="main.5748358e91c8e7f4.js" type="module"></script></body>
+<script src="runtime.94a50f974d8ca3ed.js" type="module"></script><script src="polyfills.3da5f6ad7fea9067.js" type="module"></script><script src="main.21f214971509423c.js" type="module"></script></body>
 </html>
